; ModuleID = '/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_filesys_directory_node_free.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/filesys/extr_filesys-data.c_filesys_directory_node_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.filesys_directory_node = type { %struct.filesys_directory_node* }

@tot_directory_nodes = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.filesys_directory_node*)* @filesys_directory_node_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filesys_directory_node_free(%struct.filesys_directory_node* %0) #0 {
  %2 = alloca %struct.filesys_directory_node*, align 8
  store %struct.filesys_directory_node* %0, %struct.filesys_directory_node** %2, align 8
  %3 = load i32, i32* @tot_directory_nodes, align 4
  %4 = add nsw i32 %3, -1
  store i32 %4, i32* @tot_directory_nodes, align 4
  %5 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %2, align 8
  %6 = getelementptr inbounds %struct.filesys_directory_node, %struct.filesys_directory_node* %5, i32 0, i32 0
  %7 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %6, align 8
  %8 = icmp ne %struct.filesys_directory_node* %7, null
  br i1 %8, label %9, label %19

9:                                                ; preds = %1
  %10 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %2, align 8
  %11 = getelementptr inbounds %struct.filesys_directory_node, %struct.filesys_directory_node* %10, i32 0, i32 0
  %12 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %11, align 8
  %13 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %2, align 8
  %14 = getelementptr inbounds %struct.filesys_directory_node, %struct.filesys_directory_node* %13, i32 0, i32 0
  %15 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %14, align 8
  %16 = call i32 @strlen(%struct.filesys_directory_node* %15)
  %17 = add nsw i32 %16, 1
  %18 = call i32 @zfree(%struct.filesys_directory_node* %12, i32 %17)
  br label %19

19:                                               ; preds = %9, %1
  %20 = load %struct.filesys_directory_node*, %struct.filesys_directory_node** %2, align 8
  %21 = call i32 @zfree(%struct.filesys_directory_node* %20, i32 8)
  ret void
}

declare dso_local i32 @zfree(%struct.filesys_directory_node*, i32) #1

declare dso_local i32 @strlen(%struct.filesys_directory_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
